# welbex

./: .dockerignore  .env  .gitignore  Dockerfile  Jenkinsfile  README.md  alembic.ini  boot.sh  docker-compose.yml  pyproject.toml  tz.md
alembic/: env.py
alembic/versions/: 020564bd04fd_initial_db.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: cargo.py  truck.py
app/api_v1/: deps.py
app/core/: config.py  events.py
app/crud/: __init__.py  base.py  crud_cargo.py  crud_location.py  crud_truck.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  cargo.py  location.py  truck.py
app/schemas/: __init__.py  cargo.py  location.py  truck.py
