[tool.poetry]
name = "welbex"
version = "0.1.0"
description = ""
authors = ["Ignatev Nikita <nikitaignatiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
geopy = "^2.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
